#9 Moved Map from Global to Native

--- a/docs/api-reference/CRMScript.Global.Generic.yml
+++ b/docs/api-reference/CRMScript.Global.Generic.yml
@@ -490,12 +490,12 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.String[]
   isExternal: true
   name: String[]
