--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -318,7 +318,7 @@ items:
       type: CRMScript.Global.Integer
       description: The type of this element. Types are documented under bLogic.
     - id: config
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: The map containing the configuration for the HTML element.
     return:
       type: CRMScript.Native.HtmlElement
@@ -349,7 +349,7 @@ items:
       type: CRMScript.Global.Integer
       description: The type of this element. Types are documented under bLogic.
     - id: config
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: The map containing the configuration for the HTML element.
     - id: position
       type: CRMScript.Global.Integer
@@ -1012,7 +1012,7 @@ items:
       type: CRMScript.Global.Integer
       description: The ID of the schedule to run
     - id: values
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Name-value pairs with parameters
     return:
       type: CRMScript.Global.Void
@@ -1058,7 +1058,7 @@ items:
       type: CRMScript.Global.String
       description: 
     - id: values
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.String
@@ -1413,7 +1413,7 @@ items:
     content: Map getCgiVariables()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Map containing all CGI variables
   example: 
 - uid: CRMScript.Global.Void.getCookie(String)
@@ -2000,7 +2000,7 @@ items:
     content: Map getGlobalStaticMap()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
 - uid: CRMScript.Global.Void.getGlobalVariable(String)
@@ -2782,7 +2782,7 @@ items:
       type: CRMScript.Global.Integer
       description: The index of the element. Can be retrieved with getHtmlElementIndex(elementName).
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: A map containing the config of the element
   example: 
 - uid: CRMScript.Global.Void.getScreenElementId(Integer)
@@ -2933,7 +2933,7 @@ items:
     content: Map getSessionVariables()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: all session variables for the current session.
   example: 
 - uid: CRMScript.Global.Void.getStatusIdFromName(String)
@@ -3075,7 +3075,7 @@ items:
     content: Map getVariables()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: all run time environment variables
   example: 
 - uid: CRMScript.Global.Void.getWarnings()
@@ -3094,7 +3094,7 @@ items:
     content: Map getWarnings()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: The current system warnings
   example: 
 - uid: CRMScript.Global.Void.htmlConvToText(String)
@@ -3315,7 +3315,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: A map containing the value.
   example: 
 - uid: CRMScript.Global.Void.modulo(Integer,Integer)
@@ -4184,12 +4184,12 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Date
   commentId: T:CRMScript.Global.Date
   isExternal: true
