--- a/docs/api-reference/CRMScript.Native.Cache.yml
+++ b/docs/api-reference/CRMScript.Native.Cache.yml
@@ -139,7 +139,7 @@ items:
     content: Map getRow()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: A row of fields.
   example: 
 - uid: CRMScript.Native.Cache.next()
@@ -202,9 +202,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
