--- a/docs/api-reference/CRMScript.Native.DbConverter.yml
+++ b/docs/api-reference/CRMScript.Native.DbConverter.yml
@@ -70,7 +70,7 @@ items:
     content: Map getRow()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
 - uid: CRMScript.Native.DbConverter.next()
@@ -177,10 +177,10 @@ items:
       type: CRMScript.Global.String
       description:
     - id: row
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     - id: fieldMapping
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: 
     return:
       type: CRMScript.Global.Void
@@ -204,7 +204,7 @@ items:
       type: CRMScript.Global.String
       description: The table.
     - id: row
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: The row data.
     return:
       type: CRMScript.Global.Void
@@ -240,9 +240,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
