--- a/docs/api-reference/CRMScript.Native.EventData.yml
+++ b/docs/api-reference/CRMScript.Native.EventData.yml
@@ -101,7 +101,7 @@ items:
     content: Map getInputValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: All input values of the object.
   example: 
   - "\n<pre><code>EventData ed = getEventData();\nMap m = ed.getInputValues();\n\nm.first();\nwhile (!m.eof()){\n  printLine(m.getKey() + &quot; = &quot; + m.getVal());\n  m.next();\n}</code></pre>\n"
@@ -182,7 +182,7 @@ items:
     content: Map getStateValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
 - uid: CRMScript.Native.EventData.getType()
@@ -360,12 +360,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
