--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -315,7 +315,7 @@ items:
     content: Map getResponseHeaders()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: a map of all the headers from the HTTP response headers after making a HTTP call
   example: 
 - uid: CRMScript.Native.HTTP.getValue(String)
