--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -70,7 +70,7 @@ items:
       type: CRMScript.Global.String
       description: The type of the parameter.
     - id: controlConfig
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: the control configuration values the type of the parameter allows. Optional
     - id: label
       type: CRMScript.Global.String
@@ -106,7 +106,7 @@ items:
       type: CRMScript.Global.String
       description: The type of the parameter.
     - id: controlConfig
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: the control configuration values the type of the parameter allows. Optional
     - id: label
       type: CRMScript.Global.String
@@ -142,7 +142,7 @@ items:
     content: Map getControlConfig()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
 - uid: CRMScript.Native.MacroParameter.getDescription()
@@ -314,7 +314,7 @@ items:
     content: Void setControlConfig(Map values)
     parameters:
     - id: values
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: values to set
     return:
       type: CRMScript.Global.Void
@@ -513,9 +513,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
