--- a/docs/api-reference/CRMScript.Native.SpmStaticList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmStaticList.yml
@@ -95,7 +95,7 @@ items:
     content: Map getRecipients()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: A map containing all the recipients
   example: 
 - uid: CRMScript.Native.SpmStaticList.sload(Integer)
@@ -233,9 +233,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
