--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -2767,7 +2767,7 @@ items:
       type: CRMScript.NetServer.NSAppointmentEntity
       description:
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSAppointmentAgent agent;\nNSAppointmentEntity appointmentEntity;\nMap res = agent.ValidateAppointmentEntity(appointmentEntity);</code></pre>\n"
@@ -3067,12 +3067,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSRecurrenceDate[]
   isExternal: true
   name: NSRecurrenceDate[]
