--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -54,7 +54,7 @@ items:
     content: Map GetColumnData()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Map of column name - column data items.
   example: 
   - "\n<pre><code>NSArchiveListItem thing;\nMap columnData = thing.GetColumnData();</code></pre>\n"
@@ -154,7 +154,7 @@ items:
     content: Void SetColumnData(Map columnData)
     parameters:
     - id: columnData
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: column name - column data items
     return:
       type: CRMScript.Global.Void
@@ -255,12 +255,12 @@ references:
   name: NSArchiveListItem
   nameWithType: NSArchiveListItem
   fullName: CRMScript.NetServer.NSArchiveListItem
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
