--- a/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
@@ -48,7 +48,7 @@ items:
     content: Map GetFieldProperties()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
 - uid: CRMScript.NetServer.NSCarrier.GetTableRight()
@@ -86,7 +86,7 @@ items:
     content: Void SetFieldProperties(Map properties)
     parameters:
     - id: properties
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -131,12 +131,12 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
