--- a/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
@@ -791,7 +791,7 @@ items:
       type: CRMScript.NetServer.NSContactEntity
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSContactAgent agent;\nNSContactEntity contactEntity;\nMap res = agent.ValidateContactEntity(contactEntity);</code></pre>\n"
@@ -996,12 +996,12 @@ references:
   name: NSAddress
   nameWithType: NSAddress
   fullName: CRMScript.NetServer.NSAddress
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
