--- a/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
@@ -390,7 +390,7 @@ items:
     content: Map GetCustomFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSContactEntity thing;\nMap udefs = thing.GetCustomFields();\nlog( udefs[&quot;SuperOffice:1&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( udefs[&quot;SuperOffice:1:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( udefs[&quot;custom.progid&quot;] ); // &quot;foobar&quot;* string value\nlog( udefs[&quot;x_bar&quot;] ); // &quot;[I:123]&quot;* list item id\nlog( udefs[&quot;x_bar:DisplayText&quot;] ); // &quot;foobar&quot;* list item name value</code></pre>\n"
@@ -570,7 +570,7 @@ items:
     content: Map GetExtraFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Map containing extra field values by field name.
   example: 
   - "\n<pre><code>NSContactEntity thing;\nMap extras = thing.GetExtraFields();\nlog( extras[&quot;x_abc&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( extras[&quot;x_abc:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( extras[&quot;x_bla&quot;] ); // &quot;foobar&quot;* string value</code></pre>\n"
@@ -950,7 +950,7 @@ items:
     content: Map GetUserDefinedFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Map containing user defined field values by field prog.id.
   example: 
   - "\n<pre><code>NSContactEntity thing;\nMap udefs = thing.GetUserDefinedFields();\nlog( udefs[&quot;SuperOffice:1&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( udefs[&quot;SuperOffice:1:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( udefs[&quot;custom.progid&quot;] ); // &quot;foobar&quot;* string value</code></pre>\n"
@@ -1276,7 +1276,7 @@ items:
     content: Void SetCustomFields(Map udefs)
     parameters:
     - id: udefs
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -1474,7 +1474,7 @@ items:
     content: Void SetExtraFields(Map extras)
     parameters:
     - id: extras
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -1892,7 +1892,7 @@ items:
     content: Void SetUserDefinedFields(Map udefs)
     parameters:
     - id: udefs
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -1995,12 +1995,12 @@ references:
   name: NSCustomerLanguage
   nameWithType: NSCustomerLanguage
   fullName: CRMScript.NetServer.NSCustomerLanguage
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
