--- a/docs/api-reference/CRMScript.NetServer.NSEventData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEventData.yml
@@ -100,7 +100,7 @@ items:
     content: Map GetInputValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Environment values sent to the event handler
   example: 
   - "\n<pre><code>NSEventData thing;\nMap inputValues = thing.GetInputValues();</code></pre>\n"
@@ -160,7 +160,7 @@ items:
     content: Map GetOutputValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Values sent back to the environment from the event handler
   example: 
   - "\n<pre><code>NSEventData thing;\nMap outputValues = thing.GetOutputValues();</code></pre>\n"
@@ -180,7 +180,7 @@ items:
     content: Map GetStateValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Values kept between event handlers
   example: 
   - "\n<pre><code>NSEventData thing;\nMap stateValues = thing.GetStateValues();</code></pre>\n"
@@ -264,7 +264,7 @@ items:
     content: Void SetInputValues(Map inputValues)
     parameters:
     - id: inputValues
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Environment values sent to the event handler
     return:
       type: CRMScript.Global.Void
@@ -330,7 +330,7 @@ items:
     content: Void SetOutputValues(Map outputValues)
     parameters:
     - id: outputValues
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Values sent back to the environment from the event handler
     return:
       type: CRMScript.Global.Void
@@ -352,7 +352,7 @@ items:
     content: Void SetStateValues(Map stateValues)
     parameters:
     - id: stateValues
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Values kept between event handlers
     return:
       type: CRMScript.Global.Void
@@ -399,12 +399,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
