--- a/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
@@ -309,7 +309,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSForeignSystemAgent agent;\nString entityType;\nInteger entityId;\nMap res = agent.GetAllForeignKeysOnEntity(entityType, entityId);</code></pre>\n"
@@ -965,12 +965,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSForeignDevice[]
   isExternal: true
   name: NSForeignDevice[]
