--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -2420,7 +2420,7 @@ items:
       type: CRMScript.Global.String[]
       description: An array of properties to get the values for
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: key-value pairs with the requested properties
   example: 
   - "\n<pre><code>NSListAgent agent;\nInteger documentTemplateId;\nString[] requestedProperties;\nMap res = agent.GetDocumentTemplateProperties(documentTemplateId, requestedProperties);</code></pre>\n"
@@ -2603,7 +2603,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSListAgent agent;\nInteger pluginId;\nMap res = agent.GetDocumentTypesForPlugin(pluginId);</code></pre>\n"
@@ -3548,7 +3548,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSListAgent agent;\nInteger pluginId;\nMap res = agent.GetPluginCapabilities(pluginId);</code></pre>\n"
@@ -3568,7 +3568,7 @@ items:
     content: Map GetPluginList()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSListAgent agent;\nMap res = agent.GetPluginList();</code></pre>\n"
@@ -7030,12 +7030,12 @@ references:
   name: NSTask
   nameWithType: NSTask
   fullName: CRMScript.NetServer.NSTask
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSSelectableMDOListItem[]
   isExternal: true
   name: NSSelectableMDOListItem[]
