--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -1283,7 +1283,7 @@ items:
       type: CRMScript.NetServer.NSPersonEntity
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSPersonAgent agent;\nNSPersonEntity personEntity;\nMap res = agent.ValidatePersonEntity(personEntity);</code></pre>\n"
@@ -1460,12 +1460,12 @@ references:
   name: NSResolvedPerson
   nameWithType: NSResolvedPerson
   fullName: CRMScript.NetServer.NSResolvedPerson
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.ContactSourceType
   commentId: T:CRMScript.NetServer.ContactSourceType
   isExternal: true
