--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -104,7 +104,7 @@ items:
     content: Map GetExtraValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Additional key/value properties to include in the message
   example: 
   - "\n<pre><code>NSPocketNotificationMessage thing;\nMap extraValues = thing.GetExtraValues();</code></pre>\n"
@@ -308,7 +308,7 @@ items:
     content: Void SetExtraValues(Map extraValues)
     parameters:
     - id: extraValues
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Additional key/value properties to include in the message
     return:
       type: CRMScript.Global.Void
@@ -487,12 +487,12 @@ references:
   name: TimeSpan
   nameWithType: TimeSpan
   fullName: CRMScript.Native.TimeSpan
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
