--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -1179,7 +1179,7 @@ items:
       type: CRMScript.NetServer.NSProjectEntity
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSProjectAgent agent;\nNSProjectEntity projectEntity;\nMap res = agent.ValidateProjectEntity(NSProjectEntity);</code></pre>\n"
@@ -1358,9 +1358,9 @@ references:
   name: NSImage
   nameWithType: NSImage
   fullName: CRMScript.NetServer.NSImage
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
