--- a/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
@@ -92,7 +92,7 @@ items:
     content: Map GetNsPluginConfig()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Configuration settings provided by the SMS provider. Typically contains newline-delimited settings such as username and password.
   example: 
   - "\n<pre><code>NSSmsConfig thing;\nMap nsPluginConfig = thing.GetNsPluginConfig();</code></pre>\n"
@@ -176,7 +176,7 @@ items:
     content: Void SetNsPluginConfig(Map nsPluginConfig)
     parameters:
     - id: nsPluginConfig
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Configuration settings provided by the SMS provider. Typically contains newline-delimited settings such as username and password.
     return:
       type: CRMScript.Global.Void
@@ -217,12 +217,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
