--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
@@ -150,7 +150,7 @@ items:
     content: Map GetCustomFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nMap udefs = thing.GetCustomFields();\nlog( udefs[&quot;SuperOffice:1&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( udefs[&quot;SuperOffice:1:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( udefs[&quot;custom.progid&quot;] ); // &quot;foobar&quot;* string value\nlog( udefs[&quot;x_bar&quot;] ); // &quot;[I:123]&quot;* list item id\nlog( udefs[&quot;x_bar:DisplayText&quot;] ); // &quot;foobar&quot;* list item name value</code></pre>\n"
@@ -230,7 +230,7 @@ items:
     content: Map GetExtraFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nMap extras = thing.GetExtraFields();\nlog( extras[&quot;x_abc&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( extras[&quot;x_abc:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( extras[&quot;x_bla&quot;] ); // &quot;foobar&quot;* string value</code></pre>\n"
@@ -581,7 +581,7 @@ items:
     content: Void SetCustomFields(Map udefs)
     parameters:
     - id: udefs
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -669,7 +669,7 @@ items:
     content: Void SetExtraFields(Map extras)
     parameters:
     - id: extras
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -960,12 +960,12 @@ references:
   name: NSAssociate
   nameWithType: NSAssociate
   fullName: CRMScript.NetServer.NSAssociate
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
