--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
@@ -242,7 +242,7 @@ items:
     content: Void SetTimeZoneDSTRules(Map timeZoneDSTRules)
     parameters:
     - id: timeZoneDSTRules
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Rules for daylight savings time
     return:
       type: CRMScript.Global.Void
@@ -264,7 +264,7 @@ items:
     content: Void SetTimeZoneSTDRules(Map timeZoneSTDRules)
     parameters:
     - id: timeZoneSTDRules
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Rules for standard time
     return:
       type: CRMScript.Global.Void
