--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -1119,7 +1119,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSUserAgent agent;\nInteger roleId;\nString tableName;\nMap res = agent.GetDataRights(roleId, tableName);</code></pre>\n"
@@ -2274,7 +2274,7 @@ items:
       type: CRMScript.NetServer.NSUser
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSUserAgent agent;\nNSUser user;\nMap res = agent.ValidateUser(user);</code></pre>\n"
@@ -2461,12 +2461,12 @@ references:
   name: NSCredentialType
   nameWithType: NSCredentialType
   fullName: CRMScript.NetServer.NSCredentialType
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSTokenManagementInfo
   commentId: T:CRMScript.NetServer.NSTokenManagementInfo
   isExternal: true
