--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -90,7 +90,7 @@ items:
     content: Map GetHeaders()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Custom HTTP Headers to add to webhook requests.
   example: 
   - "\n<pre><code>NSWebhook thing;\nMap headers = thing.GetHeaders();</code></pre>\n"
@@ -130,7 +130,7 @@ items:
     content: Map GetProperties()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Custom values to inject into JSON body of webhook call.
   example: 
   - "\n<pre><code>NSWebhook thing;\nMap properties = thing.GetProperties();</code></pre>\n"
@@ -352,7 +352,7 @@ items:
     content: Void SetHeaders(Map headers)
     parameters:
     - id: headers
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Custom HTTP Headers to add to webhook requests.
     return:
       type: CRMScript.Global.Void
@@ -396,7 +396,7 @@ items:
     content: Void SetProperties(Map properties)
     parameters:
     - id: properties
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Custom values to inject into JSON body of webhook call.
     return:
       type: CRMScript.Global.Void
@@ -627,12 +627,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.DateTime
   commentId: T:CRMScript.Global.DateTime
   isExternal: true
