--- a/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
@@ -197,7 +197,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     - id: data
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
