--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -22,8 +22,6 @@ items:
     href: CRMScript.Global.Generic.yml
   - name: Integer
     href: CRMScript.Global.Integer.yml
-  - name: Map
-    href: CRMScript.Global.Map.yml
   - name: String
     href: CRMScript.Global.String.yml
   - name: Time
@@ -93,6 +91,8 @@ items:
     href: CRMScript.Native.MacroReturnValue.yml
   - name: MainMenu
     href: CRMScript.Native.MainMenu.yml
+  - name: Map
+    href: CRMScript.Native.Map.yml
   - name: Message
     href: CRMScript.Native.Message.yml
   - name: Notify
