--- a/docs/api-reference/CRMScript.Native.ExtraTable.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraTable.yml
@@ -95,7 +95,7 @@ items:
     content: Map getValues()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: All the fields and values of the extraTable row.
   example: 
 - uid: CRMScript.Native.ExtraTable.load(Integer)
@@ -243,9 +243,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
