--- a/docs/api-reference/CRMScript.Native.HtmlElement.yml
+++ b/docs/api-reference/CRMScript.Native.HtmlElement.yml
@@ -229,7 +229,7 @@ items:
       type: CRMScript.Global.String
       description: 
     - id: values
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: Map of values
     return:
       type: CRMScript.Global.Void
@@ -405,9 +405,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
