--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -324,7 +324,7 @@ items:
     content: Map GetParameterObject()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: ParameterObject will be serialized to a binary blob and saved in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject = thing.GetParameterObject();</code></pre>\n"
@@ -748,7 +748,7 @@ items:
     content: Void SetParameterObject(Map parameterObject)
     parameters:
     - id: parameterObject
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.Global.Void
@@ -939,12 +939,12 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.BatchTaskState
   commentId: T:CRMScript.NetServer.BatchTaskState
   isExternal: true
