--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -864,7 +864,7 @@ items:
       type: CRMScript.Global.String[]
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentAgent agent;\nInteger documentId;\nString[] requestedProperties;\nMap res = agent.GetDocumentProperties(documentId, requestedProperties);</code></pre>\n"
@@ -1151,7 +1151,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: A standard set of properties is defined in SuperOffice.CRM.Documents.Constants.Capabilities.
   example: 
   - "\n<pre><code>NSDocumentAgent agent;\nInteger pluginId;\nMap res = agent.GetPluginCapabilities(pluginId);</code></pre>\n"
@@ -1171,7 +1171,7 @@ items:
     content: Map GetPluginList()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentAgent agent;\nMap res = agent.GetPluginList();</code></pre>\n"
@@ -2060,7 +2060,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     - id: customTags
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: These tags will be available during substitution in addition to all the existing tags. Custom values will override values otherwise set.
     return:
       type: CRMScript.NetServer.NSStream
@@ -2156,7 +2156,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     - id: customTags
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: These tags will be available during substitution in addition to all the existing tags. Custom values will override values otherwise set.
     return:
       type: CRMScript.NetServer.NSStream
@@ -2310,7 +2310,7 @@ items:
       type: CRMScript.Global.Integer
       description: See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: customTags
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: 
     - id: contactId
       type: CRMScript.Global.Integer
@@ -2386,7 +2386,7 @@ items:
       type: CRMScript.NetServer.NSDocumentEntity
       description: 
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentAgent agent;\nNSDocumentEntity documentEntity;\nMap res = agent.ValidateDocumentEntity(documentEntity);</code></pre>\n"
@@ -2558,12 +2558,12 @@ references:
   name: NSCommandInfo
   nameWithType: NSCommandInfo
   fullName: CRMScript.NetServer.NSCommandInfo
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSVersionInfo[]
   isExternal: true
   name: NSVersionInfo[]
