--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -252,7 +252,7 @@ items:
     content: Map GetCustomFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nMap udefs = thing.GetCustomFields();\nlog( udefs[&quot;SuperOffice:1&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( udefs[&quot;SuperOffice:1:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( udefs[&quot;custom.progid&quot;] ); // &quot;foobar&quot;* string value\nlog( udefs[&quot;x_bar&quot;] ); // &quot;[I:123]&quot;* list item id\nlog( udefs[&quot;x_bar:DisplayText&quot;] ); // &quot;foobar&quot;* list item name value</code></pre>\n"
@@ -372,7 +372,7 @@ items:
     content: Map GetExtraFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nMap extras = thing.GetExtraFields();\nlog( extras[&quot;x_abc&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( extras[&quot;x_abc:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( extras[&quot;x_bla&quot;] ); // &quot;foobar&quot;* string value</code></pre>\n"
@@ -728,7 +728,7 @@ items:
     content: Map GetUserDefinedFields()
     parameters: []
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nMap udefs = thing.GetUserDefinedFields();\nlog( udefs[&quot;SuperOffice:1&quot;] ); // &quot;[I:123]&quot;* integer or list item id\nlog( udefs[&quot;SuperOffice:1:DisplayText&quot;] ); // &quot;bla bla&quot;* list item value\nlog( udefs[&quot;custom.progid&quot;] ); // &quot;foobar&quot;* string value</code></pre>\n"
@@ -942,7 +942,7 @@ items:
     content: Void SetCustomFields(Map udefs)
     parameters:
     - id: udefs
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: user-defined and extra fields
     return:
       type: CRMScript.Global.Void
@@ -1074,7 +1074,7 @@ items:
     content: Void SetExtraFields(Map extras)
     parameters:
     - id: extras
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: extra-field values
     return:
       type: CRMScript.Global.Void
@@ -1466,7 +1466,7 @@ items:
     content: Void SetUserDefinedFields(Map udefs)
     parameters:
     - id: udefs
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description: user-defined fields
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nMap udefs;\nudefs[&quot;SuperOffice:1&quot;] = &quot;[I:123]&quot;;\nudefs[&quot;SuperOffice:1&quot;] = &quot;123&quot;; // this will also work, but beware of decimal point variations in different languages\nudefs[&quot;custom.progid&quot;] = &quot;foobar&quot;;\nthing.SetUserDefinedFields(udefs);</code></pre>\n"
@@ -1551,12 +1551,12 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.NetServer.NSDocumentTemplate
   commentId: T:CRMScript.NetServer.NSDocumentTemplate
   isExternal: true
