--- a/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
@@ -143,7 +143,7 @@ items:
       type: CRMScript.NetServer.NSOutgoingMessage[]
       description: 
     - id: config
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
       type: CRMScript.NetServer.NSMessageDeliveryStatus[]
