--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
@@ -971,7 +971,7 @@ items:
       type: CRMScript.Global.String
       description: Name of the connector. Ignored if connectionId is non-zero.
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
   example: 
   - "\n<pre><code>NSQuoteAgent agent;\nInteger connectionId;\nString connectorName;\nMap res = agent.GetConfigurationFields(connectionId, connectorName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAgent.GetConnection(Integer)
@@ -1015,7 +1015,7 @@ items:
       type: CRMScript.Global.Integer
       description: Primary key of the connection
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
   example: 
   - "\n<pre><code>NSQuoteAgent agent;\nInteger quoteConnectionId;\nMap res = agent.GetConnectionConfigFields(quoteConnectionId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAgent.GetConnectionsForAssociate(Integer)
@@ -1989,10 +1989,10 @@ items:
       type: CRMScript.Global.Integer
       description: Primary key of the connection
     - id: connectionConfigFields
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
   example: 
   - "\n<pre><code>NSQuoteAgent agent;\nInteger quoteConnectionId;\nMap connectionConfigFields;\nMap res = agent.SaveConnectionConfigFields(quoteConnectionId, connectionConfigFields);</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAgent.SavePriceList(NSPriceList)
