--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -955,7 +955,7 @@ items:
       type: CRMScript.NetServer.NSSaleEntity
       description:
     return:
-      type: CRMScript.Global.Map
+      type: CRMScript.Native.Map
       description:
   example: 
   - "\n<pre><code>NSSaleAgent agent;\nNSSaleEntity saleEntity;\nMap res = agent.ValidateSaleEntity(saleEntity);</code></pre>\n"
@@ -1080,12 +1080,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.Map
-  commentId: T:CRMScript.Global.Map
+- uid: CRMScript.Native.Map
+  commentId: T:CRMScript.Native.Map
   isExternal: true
   name: Map
   nameWithType: Map
-  fullName: CRMScript.Global.Map
+  fullName: CRMScript.Native.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
